@@ -16,7 +16,7 @@ building and installation process for monotone
     - automake.
     - gettext.
     - a supported C++ compiler: g++ 3.2 or later.
-    - an installed copy of boost 1.32.0 or later.
+    - an installed copy of boost 1.33.0 or later.
     - zlib 1.1.4 or later.
     - libiconv if the iconv() function is missing.
 
