@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Maintainers for Monotone <monotone-debian@nongnu.org>
 Uploaders: Richard Levitte <richard@levitte.org>, Zack Weinberg <zackw@panix.com>, Ludovic Brenta <lbrenta@debian.org>
 Build-Depends: cdbs (>= 0.4.28), debhelper (>= 4.2.0), autotools-dev,
- libboost-regex-dev, libboost-dev, libz-dev
+ libboost-regex-dev (>= 1.33.0), libboost-dev (>= 1.33.0), libz-dev
 Build-Depends-Indep: ps2eps, texlive-base, texlive-generic-recommended,
  texlive-latex-base, texinfo, xpdf-utils, po-debconf
 Standards-Version: 3.7.2.2
